[gd_scene format=3 uid="uid://cm6tulftvh8w7"]

[ext_resource type="Script" uid="uid://cnb85w66lwoth" path="res://sprites/scripts/grunt.gd" id="1_u2tar"]
[ext_resource type="Texture2D" uid="uid://ju3icwfti0du" path="res://assets/enemy/grunt_death.png" id="2_ha57j"]
[ext_resource type="Texture2D" uid="uid://bbn18e5sjg6nn" path="res://assets/enemy/grunt_idle.png" id="2_mxw5s"]
[ext_resource type="Texture2D" uid="uid://bqim54t0qufv5" path="res://assets/enemy/grunt_run.png" id="3_ha57j"]
[ext_resource type="Texture2D" uid="uid://wtjoismy5d0s" path="res://assets/enemy/grunt_shoot.png" id="5_nugqd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha57j"]
size = Vector2(16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnllh"]
atlas = ExtResource("2_ha57j")
region = Rect2(0, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0fi5"]
atlas = ExtResource("2_ha57j")
region = Rect2(26, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjtrx"]
atlas = ExtResource("2_ha57j")
region = Rect2(52, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_hawy0"]
atlas = ExtResource("2_ha57j")
region = Rect2(78, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltm16"]
atlas = ExtResource("2_ha57j")
region = Rect2(104, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vqwb"]
atlas = ExtResource("2_ha57j")
region = Rect2(130, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ldy8"]
atlas = ExtResource("2_ha57j")
region = Rect2(156, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggo3o"]
atlas = ExtResource("2_ha57j")
region = Rect2(182, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3l5i"]
atlas = ExtResource("2_ha57j")
region = Rect2(208, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5xvj"]
atlas = ExtResource("2_ha57j")
region = Rect2(234, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvnbe"]
atlas = ExtResource("2_ha57j")
region = Rect2(260, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_0laem"]
atlas = ExtResource("2_ha57j")
region = Rect2(286, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_nugqd"]
atlas = ExtResource("2_mxw5s")
region = Rect2(0, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvcx5"]
atlas = ExtResource("2_mxw5s")
region = Rect2(26, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml26d"]
atlas = ExtResource("3_ha57j")
region = Rect2(0, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd3uo"]
atlas = ExtResource("3_ha57j")
region = Rect2(26, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rxst"]
atlas = ExtResource("3_ha57j")
region = Rect2(52, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgodn"]
atlas = ExtResource("3_ha57j")
region = Rect2(78, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv2u5"]
atlas = ExtResource("3_ha57j")
region = Rect2(104, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrrs3"]
atlas = ExtResource("3_ha57j")
region = Rect2(130, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vans"]
atlas = ExtResource("3_ha57j")
region = Rect2(156, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_8carh"]
atlas = ExtResource("3_ha57j")
region = Rect2(182, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_11xdf"]
atlas = ExtResource("3_ha57j")
region = Rect2(208, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_30wc6"]
atlas = ExtResource("3_ha57j")
region = Rect2(234, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjiu4"]
atlas = ExtResource("5_nugqd")
region = Rect2(0, 0, 26, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsynf"]
atlas = ExtResource("5_nugqd")
region = Rect2(26, 0, 26, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_vnllh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnllh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0fi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjtrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hawy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltm16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vqwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ldy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggo3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3l5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5xvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvnbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0laem")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nugqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvcx5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml26d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd3uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rxst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgodn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv2u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrrs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vans")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8carh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11xdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30wc6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjiu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsynf")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nugqd"]
size = Vector2(16, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_ha57j"]
radius = 120.0

[node name="Grunt" type="CharacterBody2D" unique_id=1531908231 node_paths=PackedStringArray("sprite", "collision_shape") groups=["Enemy"]]
collision_layer = 8
collision_mask = 531
platform_on_leave = 2
script = ExtResource("1_u2tar")
sprite = NodePath("AnimatedSprite")
collision_shape = NodePath("CollisionShape")

[node name="CollisionShape" type="CollisionShape2D" parent="." unique_id=1472386492]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_ha57j")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="." unique_id=823426079]
sprite_frames = SubResource("SpriteFrames_vnllh")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.40150395
flip_h = true

[node name="BodyArea2D" type="Area2D" parent="." unique_id=53579601]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea2D" unique_id=510500678]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_nugqd")
debug_color = Color(0.6407898, 0.5184502, 0.233206, 0.41960785)

[node name="DetectorArea2D" type="Area2D" parent="." unique_id=662123866]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorArea2D" unique_id=1656165409]
shape = SubResource("CircleShape2D_ha57j")
debug_color = Color(0, 0.6, 0.69803923, 0.08627451)

[node name="ShootTimer" type="Timer" parent="." unique_id=2094497951]
autostart = true

[connection signal="area_entered" from="DetectorArea2D" to="." method="_on_detector_area_2d_area_entered"]
[connection signal="area_exited" from="DetectorArea2D" to="." method="_on_detector_area_2d_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
